# INVERSIONES

./: .gitignore  .npmignore  PROJECT_STRUCTURE.md  README.md  T5-Actividad3-EntregaFinal.md  package-lock.json  package.json
.drfic/diana-sdk/sdk/diana-sdk-installer/: CHANGELOG.md  MANIFEST.in  README.md  hatch_build.py  pyproject.toml  setup.py
.drfic/diana-sdk/sdk/diana-sdk-installer/assets/drfic/diana-sdk/sdk/diana/: constitution.md
.drfic/diana-sdk/sdk/diana-sdk-installer/assets/drfic/diana-sdk/sdk/diana/checklists/: initiative-audit-checklist.md
.drfic/diana-sdk/sdk/diana-sdk-installer/assets/drfic/diana-sdk/sdk/diana/knowledge/indexes/: master-index.md
.drfic/diana-sdk/sdk/diana-sdk-installer/assets/drfic/diana-sdk/sdk/diana/prompts/: agent-copilot.md  agent-reviewer.md  agent-spec-writer.md
.drfic/diana-sdk/sdk/diana-sdk-installer/assets/drfic/diana-sdk/sdk/diana/rules/: agents.md  naming-conventions.md  spec-versioning.md  speckit-integration.md
.drfic/diana-sdk/sdk/diana-sdk-installer/assets/drfic/diana-sdk/sdk/diana/templates/: meta.md
.drfic/diana-sdk/sdk/diana-sdk-installer/assets/github/agents/: diana.change.agent.md  diana.help.agent.md  diana.knowledge.agent.md  diana.new.agent.md  diana.plan.agent.md  diana.specify.agent.md  diana.sync.agent.md
.drfic/diana-sdk/sdk/diana-sdk-installer/assets/github/prompts/: diana.change.prompt.md  diana.constitution.prompt.md  diana.knowledge.prompt.md  diana.new.prompt.md  diana.plan.prompt.md  diana.specify.prompt.md  diana.sync.prompt.md
.drfic/diana-sdk/sdk/diana-sdk-installer/src/diana_cli/: main.py
(+423 files in other folders)
